# my_editor_rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  build.rs  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/modeleaf-app/: Cargo.toml
crates/modeleaf-app/src/: application.rs  behavior.rs  bootstrap.rs  command_resolver.rs  diagnostics.rs  dispatcher.rs  execution.rs  kernel.rs  layout.rs  lib.rs  message.rs  operation.rs  query.rs  remote.rs  runtime.rs  save.rs  scene_model.rs  session.rs  tasks.rs  tests.rs  transaction.rs  view.rs
crates/modeleaf-app/src/tests/: baseline.rs
crates/modeleaf-core/: Cargo.toml
crates/modeleaf-core/src/: content.rs  content_store.rs  keymap.rs  lib.rs  text_snapshot.rs  transaction.rs
crates/modeleaf-frontend/: Cargo.toml
crates/modeleaf-frontend/src/: lib.rs
crates/modeleaf-mode/: Cargo.toml
crates/modeleaf-mode/src/: action.rs  command.rs  lib.rs  operation.rs  presentation.rs  runtime.rs  typed.rs
crates/modeleaf-plugin-v8/: Cargo.toml
crates/modeleaf-plugin-v8/src/: api.rs  lib.rs
crates/modeleaf-plugin-v8/src/script/: bridge.rs  host.rs  mod.rs  primitives.rs  schema.rs  worker.rs
crates/modeleaf-protocol/: Cargo.toml
crates/modeleaf-protocol/src/: content_query.rs  ids.rs  key_event.rs  remote.rs  scene.rs  selection.rs  space.rs  viewport.rs
crates/modeleaf-tui/: Cargo.toml
crates/modeleaf-tui/src/: lib.rs
crates/vell-app/: Cargo.toml
crates/vell-app/src/: application.rs  behavior.rs  bootstrap.rs  command_resolver.rs  diagnostics.rs  dispatcher.rs  execution.rs  kernel.rs  layout.rs  lib.rs  message.rs  operation.rs  query.rs  remote.rs  runtime.rs  save.rs  scene_model.rs  session.rs  tests.rs  theme.rs  transaction.rs  view.rs
crates/vell-app/src/tests/: baseline.rs
crates/vell-core/: Cargo.toml
crates/vell-core/src/: action.rs  buffer.rs  command.rs  content.rs  content_store.rs  content_view_state.rs  edit.rs  input.rs  lib.rs  status_bar.rs
crates/vell-frontend/: Cargo.toml
crates/vell-frontend/src/: lib.rs
crates/vell-mode/: Cargo.toml
crates/vell-mode/src/: action.rs  command.rs  operation.rs  presentation.rs  runtime.rs  typed.rs
crates/vell-plugin-v8/: Cargo.toml  build.rs
crates/vell-plugin-v8/src/: api.rs  lib.rs
crates/vell-plugin-v8/src/script/: bridge.rs  host.rs  invocation.rs  mod.rs  mode_adapter.rs  primitives.rs  schema.rs  worker.rs
crates/vell-protocol/: Cargo.toml
crates/vell-protocol/src/: content_query.rs  frontend_event.rs  geometry.rs  lib.rs  remote.rs  revision.rs
crates/vell-theme/: Cargo.toml
crates/vell-theme/src/: lib.rs
crates/vell-tui/: Cargo.toml
crates/vell-tui/src/: lib.rs
crates/vell-tui/src/terminal/: output.rs
crates/vell-tui/src/tui/: frontend.rs  mod.rs  scene_renderer.rs  test_scene.rs
docs/: release.md  scripting.md
docs/design/: command-execution-ownership.md  composable-mode-architecture.md  core-dependency-direction.md  editor-kernel-architecture.md  mode-action-ownership.md  theme-face-architecture.md  typescript-scripting-architecture.md
docs/plans/: 2026-07-10-architecture-improvements.md  2026-07-10-render-item-space-identity-implementation.md
docs/roadmap/: 2026-07-13-architecture-improvements.md  architecture_convergence.md  architecture_transformation.md  codebase-cleanliness-and-consistency-roadmap.md  editor-evolution-roadmap.md  editor_evolution.md  eido_evolution.md  m0_baseline.md  m1_script_safety.md  m2_script_modules.md  m3_modeleaf_rename.md  m3_vell_rename.md  m4_workspace.md  m5_typed_mode.md  m6_plugin_api.md  m7_content_gate.md  m8_release_quality.md  unified-transaction-management-roadmap.md
docs/superpowers/plans/: 2026-06-29-frontend-abstraction.md  2026-06-29-tui-editor-v0.1.md  2026-07-09-content-mode.md  (+30 more)
runtime/: editor.d.ts
runtime/examples/: v1-migration.ts
runtime/themes/: catppuccin-base.toml  catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  terminal-default.toml
runtime/type-tests/: tsconfig.json  v2-mode.ts
src/: main.rs
src/app/: action.rs  application.rs  behavior.rs  bootstrap.rs  command.rs  command_resolver.rs  content.rs  dispatcher.rs  execution.rs  executor.rs  kernel.rs  layout.rs  message.rs  mod.rs  mode.rs  operation.rs  presentation.rs  query.rs  remote.rs  runtime.rs  save.rs  scene_model.rs  script.rs  session.rs  tasks.rs  tests.rs  transaction.rs  view.rs
src/core/: buffer.rs  command.rs  content.rs  content_runtime.rs  content_store.rs  content_view_state.rs  edit.rs  input.rs  keymap.rs  mod.rs  mode.rs  mode_name.rs  motion.rs  status_bar.rs  text_snapshot.rs  transaction.rs
src/frontend/: mod.rs
src/protocol/: content_query.rs  frontend_event.rs  geometry.rs  ids.rs  key_event.rs  mod.rs  remote.rs  scene.rs  selection.rs  space.rs  status.rs  viewport.rs
src/terminal/: input.rs  key_translate.rs  lifecycle.rs  mod.rs  output.rs
src/tui/: frontend.rs  mod.rs  resolved.rs  scene_renderer.rs  status_line.rs  taffy_engine.rs  test_scene.rs  text_cells.rs  tui_frontend.rs
(+56 files in other folders)
