[workspace]
resolver = "3"
members = [
    "crates/modeleaf-core",
    "crates/modeleaf-frontend",
    "crates/modeleaf-mode",
    "crates/modeleaf-plugin-v8",
    "crates/modeleaf-protocol",
    "crates/modeleaf-tui",
]
default-members = ["."]

[package]
name = "modeleaf"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tempfile = "3"
modeleaf-protocol = { path = "crates/modeleaf-protocol" }
modeleaf-core = { path = "crates/modeleaf-core" }
modeleaf-frontend = { path = "crates/modeleaf-frontend" }
modeleaf-mode = { path = "crates/modeleaf-mode" }
modeleaf-plugin-v8 = { path = "crates/modeleaf-plugin-v8" }
modeleaf-tui = { path = "crates/modeleaf-tui" }

[dev-dependencies]
modeleaf-mode = { path = "crates/modeleaf-mode", features = ["test-support"] }
modeleaf-plugin-v8 = { path = "crates/modeleaf-plugin-v8", features = ["test-support"] }
