[workspace]
resolver = "3"
members = [
    "crates/modeleaf-app",
    "crates/modeleaf-core",
    "crates/modeleaf-frontend",
    "crates/modeleaf-mode",
    "crates/modeleaf-plugin-v8",
    "crates/modeleaf-protocol",
    "crates/modeleaf-tui",
]
default-members = ["."]

[package]
name = "modeleaf"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
tokio = { version = "1", features = ["full"] }
modeleaf-app = { path = "crates/modeleaf-app" }
modeleaf-plugin-v8 = { path = "crates/modeleaf-plugin-v8" }
modeleaf-tui = { path = "crates/modeleaf-tui" }
