[workspace]
resolver = "3"
members = [
    "crates/vell-app",
    "crates/vell-core",
    "crates/vell-frontend",
    "crates/vell-mode",
    "crates/vell-plugin-v8",
    "crates/vell-protocol",
    "crates/vell-theme",
    "crates/vell-tui",
]
default-members = ["."]

[package]
name = "vell"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
tokio = { version = "1", features = ["full"] }
vell-app = { path = "crates/vell-app" }
vell-plugin-v8 = { path = "crates/vell-plugin-v8" }
vell-tui = { path = "crates/vell-tui" }
