[package]
name = "modeleaf-plugin-v8"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[features]
test-support = []

[dependencies]
deno_ast = { version = "0.50.3", features = ["transpiling"] }
modeleaf-core = { path = "../modeleaf-core" }
modeleaf-mode = { path = "../modeleaf-mode" }
modeleaf-protocol = { path = "../modeleaf-protocol" }
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
v8 = { version = "=149.3.0", default-features = false, features = [
    "simdutf",
    "use_custom_libcxx",
] }

[dev-dependencies]
tempfile = "3"
