[package]
name = "vell-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
vell-core = { path = "../vell-core" }
vell-frontend = { path = "../vell-frontend" }
vell-mode = { path = "../vell-mode" }
vell-protocol = { path = "../vell-protocol" }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[dev-dependencies]
vell-mode = { path = "../vell-mode", features = ["test-support"] }
vell-plugin-v8 = { path = "../vell-plugin-v8", features = ["test-support"] }
